CPP14 Step7 Completed

--- a/cpp14/CMakeLists.txt
+++ b/cpp14/CMakeLists.txt
@@ -45,3 +45,4 @@ add_executable(step3_env ${SOURCE_FILES} ${LIBRARY_FILES} src/step3_env.cpp)
 add_executable(step4_if_fn_do ${SOURCE_FILES} ${LIBRARY_FILES} src/step4_if_fn_do.cpp)
 add_executable(step5_tco ${SOURCE_FILES} ${LIBRARY_FILES} src/step5_tco.cpp)
 add_executable(step6_file ${SOURCE_FILES} ${LIBRARY_FILES} src/step6_file.cpp)
+add_executable(step7_quote ${SOURCE_FILES} ${LIBRARY_FILES} src/step7_quote.cpp)
