--- a/cpp14/Makefile
+++ b/cpp14/Makefile
@@ -111,6 +111,19 @@ depend:
 .PHONY : depend
 
 #=============================================================================
+# Target rules for targets named step7_quote
+
+# Build rule for target.
+step7_quote: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 step7_quote
+.PHONY : step7_quote
+
+# fast build rule for target.
+step7_quote/fast:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/build
+.PHONY : step7_quote/fast
+
+#=============================================================================
 # Target rules for targets named step5_tco
 
 # Build rule for target.
@@ -207,6 +220,7 @@ src/ast/atom.o: src/ast/atom.cpp.o
 
 # target to build an object file
 src/ast/atom.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/atom.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/atom.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/atom.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/atom.cpp.o
@@ -222,6 +236,7 @@ src/ast/atom.i: src/ast/atom.cpp.i
 
 # target to preprocess a source file
 src/ast/atom.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/atom.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/atom.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/atom.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/atom.cpp.i
@@ -237,6 +252,7 @@ src/ast/atom.s: src/ast/atom.cpp.s
 
 # target to generate assembly for a file
 src/ast/atom.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/atom.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/atom.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/atom.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/atom.cpp.s
@@ -252,6 +268,7 @@ src/ast/internal.o: src/ast/internal.cpp.o
 
 # target to build an object file
 src/ast/internal.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/internal.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/internal.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/internal.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/internal.cpp.o
@@ -267,6 +284,7 @@ src/ast/internal.i: src/ast/internal.cpp.i
 
 # target to preprocess a source file
 src/ast/internal.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/internal.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/internal.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/internal.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/internal.cpp.i
@@ -282,6 +300,7 @@ src/ast/internal.s: src/ast/internal.cpp.s
 
 # target to generate assembly for a file
 src/ast/internal.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/internal.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/internal.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/internal.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/internal.cpp.s
@@ -297,6 +316,7 @@ src/ast/types.o: src/ast/types.cpp.o
 
 # target to build an object file
 src/ast/types.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/types.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/types.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/types.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/types.cpp.o
@@ -312,6 +332,7 @@ src/ast/types.i: src/ast/types.cpp.i
 
 # target to preprocess a source file
 src/ast/types.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/types.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/types.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/types.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/types.cpp.i
@@ -327,6 +348,7 @@ src/ast/types.s: src/ast/types.cpp.s
 
 # target to generate assembly for a file
 src/ast/types.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/types.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/types.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/types.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/types.cpp.s
@@ -342,6 +364,7 @@ src/ast/userFunc.o: src/ast/userFunc.cpp.o
 
 # target to build an object file
 src/ast/userFunc.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/userFunc.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/userFunc.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/userFunc.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/userFunc.cpp.o
@@ -357,6 +380,7 @@ src/ast/userFunc.i: src/ast/userFunc.cpp.i
 
 # target to preprocess a source file
 src/ast/userFunc.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/userFunc.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/userFunc.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/userFunc.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/userFunc.cpp.i
@@ -372,6 +396,7 @@ src/ast/userFunc.s: src/ast/userFunc.cpp.s
 
 # target to generate assembly for a file
 src/ast/userFunc.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/ast/userFunc.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/ast/userFunc.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/ast/userFunc.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/ast/userFunc.cpp.s
@@ -387,6 +412,7 @@ src/parser/parser.o: src/parser/parser.cpp.o
 
 # target to build an object file
 src/parser/parser.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/parser.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/parser.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/parser.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/parser.cpp.o
@@ -402,6 +428,7 @@ src/parser/parser.i: src/parser/parser.cpp.i
 
 # target to preprocess a source file
 src/parser/parser.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/parser.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/parser.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/parser.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/parser.cpp.i
@@ -417,6 +444,7 @@ src/parser/parser.s: src/parser/parser.cpp.s
 
 # target to generate assembly for a file
 src/parser/parser.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/parser.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/parser.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/parser.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/parser.cpp.s
@@ -432,6 +460,7 @@ src/parser/tokenizer.o: src/parser/tokenizer.cpp.o
 
 # target to build an object file
 src/parser/tokenizer.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/tokenizer.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/tokenizer.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/tokenizer.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/tokenizer.cpp.o
@@ -447,6 +476,7 @@ src/parser/tokenizer.i: src/parser/tokenizer.cpp.i
 
 # target to preprocess a source file
 src/parser/tokenizer.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/tokenizer.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/tokenizer.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/tokenizer.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/tokenizer.cpp.i
@@ -462,6 +492,7 @@ src/parser/tokenizer.s: src/parser/tokenizer.cpp.s
 
 # target to generate assembly for a file
 src/parser/tokenizer.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/parser/tokenizer.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/parser/tokenizer.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/parser/tokenizer.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/parser/tokenizer.cpp.s
@@ -477,6 +508,7 @@ src/runtime/core.o: src/runtime/core.cpp.o
 
 # target to build an object file
 src/runtime/core.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/core.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/core.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/core.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/core.cpp.o
@@ -492,6 +524,7 @@ src/runtime/core.i: src/runtime/core.cpp.i
 
 # target to preprocess a source file
 src/runtime/core.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/core.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/core.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/core.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/core.cpp.i
@@ -507,6 +540,7 @@ src/runtime/core.s: src/runtime/core.cpp.s
 
 # target to generate assembly for a file
 src/runtime/core.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/core.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/core.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/core.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/core.cpp.s
@@ -522,6 +556,7 @@ src/runtime/environment.o: src/runtime/environment.cpp.o
 
 # target to build an object file
 src/runtime/environment.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/environment.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/environment.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/environment.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/environment.cpp.o
@@ -537,6 +572,7 @@ src/runtime/environment.i: src/runtime/environment.cpp.i
 
 # target to preprocess a source file
 src/runtime/environment.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/environment.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/environment.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/environment.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/environment.cpp.i
@@ -552,6 +588,7 @@ src/runtime/environment.s: src/runtime/environment.cpp.s
 
 # target to generate assembly for a file
 src/runtime/environment.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/runtime/environment.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/runtime/environment.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/runtime/environment.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/runtime/environment.cpp.s
@@ -750,12 +787,40 @@ src/step6_file.cpp.s:
 	$(MAKE) -f CMakeFiles/step6_file.dir/build.make CMakeFiles/step6_file.dir/src/step6_file.cpp.s
 .PHONY : src/step6_file.cpp.s
 
+src/step7_quote.o: src/step7_quote.cpp.o
+
+.PHONY : src/step7_quote.o
+
+# target to build an object file
+src/step7_quote.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/step7_quote.cpp.o
+.PHONY : src/step7_quote.cpp.o
+
+src/step7_quote.i: src/step7_quote.cpp.i
+
+.PHONY : src/step7_quote.i
+
+# target to preprocess a source file
+src/step7_quote.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/step7_quote.cpp.i
+.PHONY : src/step7_quote.cpp.i
+
+src/step7_quote.s: src/step7_quote.cpp.s
+
+.PHONY : src/step7_quote.s
+
+# target to generate assembly for a file
+src/step7_quote.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/step7_quote.cpp.s
+.PHONY : src/step7_quote.cpp.s
+
 src/util/either.o: src/util/either.cpp.o
 
 .PHONY : src/util/either.o
 
 # target to build an object file
 src/util/either.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/either.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/either.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/either.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/either.cpp.o
@@ -771,6 +836,7 @@ src/util/either.i: src/util/either.cpp.i
 
 # target to preprocess a source file
 src/util/either.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/either.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/either.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/either.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/either.cpp.i
@@ -786,6 +852,7 @@ src/util/either.s: src/util/either.cpp.s
 
 # target to generate assembly for a file
 src/util/either.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/either.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/either.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/either.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/either.cpp.s
@@ -801,6 +868,7 @@ src/util/helpers.o: src/util/helpers.cpp.o
 
 # target to build an object file
 src/util/helpers.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/helpers.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/helpers.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/helpers.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/helpers.cpp.o
@@ -816,6 +884,7 @@ src/util/helpers.i: src/util/helpers.cpp.i
 
 # target to preprocess a source file
 src/util/helpers.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/helpers.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/helpers.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/helpers.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/helpers.cpp.i
@@ -831,6 +900,7 @@ src/util/helpers.s: src/util/helpers.cpp.s
 
 # target to generate assembly for a file
 src/util/helpers.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/helpers.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/helpers.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/helpers.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/helpers.cpp.s
@@ -846,6 +916,7 @@ src/util/readline.o: src/util/readline.cpp.o
 
 # target to build an object file
 src/util/readline.cpp.o:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/readline.cpp.o
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/readline.cpp.o
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/readline.cpp.o
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/readline.cpp.o
@@ -861,6 +932,7 @@ src/util/readline.i: src/util/readline.cpp.i
 
 # target to preprocess a source file
 src/util/readline.cpp.i:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/readline.cpp.i
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/readline.cpp.i
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/readline.cpp.i
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/readline.cpp.i
@@ -876,6 +948,7 @@ src/util/readline.s: src/util/readline.cpp.s
 
 # target to generate assembly for a file
 src/util/readline.cpp.s:
+	$(MAKE) -f CMakeFiles/step7_quote.dir/build.make CMakeFiles/step7_quote.dir/src/util/readline.cpp.s
 	$(MAKE) -f CMakeFiles/step5_tco.dir/build.make CMakeFiles/step5_tco.dir/src/util/readline.cpp.s
 	$(MAKE) -f CMakeFiles/step4_if_fn_do.dir/build.make CMakeFiles/step4_if_fn_do.dir/src/util/readline.cpp.s
 	$(MAKE) -f CMakeFiles/step2_eval.dir/build.make CMakeFiles/step2_eval.dir/src/util/readline.cpp.s
@@ -893,6 +966,7 @@ help:
 	@echo "... depend"
 	@echo "... rebuild_cache"
 	@echo "... edit_cache"
+	@echo "... step7_quote"
 	@echo "... step5_tco"
 	@echo "... step4_if_fn_do"
 	@echo "... step2_eval"
@@ -945,6 +1019,9 @@ help:
 	@echo "... src/step6_file.o"
 	@echo "... src/step6_file.i"
 	@echo "... src/step6_file.s"
+	@echo "... src/step7_quote.o"
+	@echo "... src/step7_quote.i"
+	@echo "... src/step7_quote.s"
 	@echo "... src/util/either.o"
 	@echo "... src/util/either.i"
 	@echo "... src/util/either.s"
